menambahkan data nama dan rombel

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Ini halaman index</h1>
+    <h2>Nama: Abimanyu Galuh Ananta</h2>
+    <h2>Rombel: PPLG X-3</h2>
 </body>
 </html>
